--- a/chat/package.json
+++ b/chat/package.json
@@ -17,6 +17,7 @@
     "image-download": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-emoji": "^5.6.5",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
